[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/scaffolder/src/gui/screen_container.gd" type="Script" id=1]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/centered_panel.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/full_screen_panel.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/scaffolder/src/gui/nav_bar.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/scaffolder/src/config/scaffolder_default_theme.tres" type="Theme" id=5]

[node name="ScreenContainer" type="Node2D"]
script = ExtResource( 1 )

[node name="FullScreenPanel" parent="." instance=ExtResource( 3 )]
margin_right = 3840.0
margin_bottom = 2019.0
mouse_filter = 1
theme = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="FullScreenPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 3833.0
margin_bottom = 2012.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NavBar" parent="FullScreenPanel/VBoxContainer" instance=ExtResource( 4 )]
margin_right = 3826.0
margin_bottom = 174.0
mouse_filter = 1

[node name="CenteredPanel" parent="FullScreenPanel/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1906.0
margin_top = 178.0
margin_right = 1920.0
margin_bottom = 2005.0
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 3
theme = ExtResource( 5 )
stretches_vertically = true

[node name="ScrollContainer" type="ScrollContainer" parent="FullScreenPanel/VBoxContainer/CenteredPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 7.0
margin_bottom = 1820.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer"]
margin_bottom = 1813.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
